# vanuatu-energy-dash-app

./: .dockerignore  Dockerfile  Makefile  README.md  app.old.py  app.py  config.py  docker-compose.yml  electricity.csv  extractUnelcoTariffReportData.py  fetchCurrencyExchangeRateData.py  fetchUnelcoTariffReport.py  fetchUraAffordabilityReports.py  parseUraMarketSnapshotData.py  pyproject.toml  requirements.txt  utils.py
app/: main.py  routes.py  unelco.py  ura.py  utils.py
app/commands/: exchange_rates.py  oil.py  unelco.py  ura.py
app/dash/: prices.py  sources.py
app/data/: crude-oil-wti.csv  electricity.csv  exchange-rates.csv
app/scripts/: extractUraAffordabilityReportData.py  fetchCurrencyExchangeRateData.py  parseUraMarketSnapshotData.py
app/static/: _variables.scss  bootstrap-theme.min.css
app/templates/: about.html  base.html  dash.html  index.html
data/: crude-oil-wti.csv  crudoil-brent.csv  crudoil-wti.csv  electricity.csv
data/exchange-rates/: daily.csv  monthly.csv  vuv-usd-spot-exchange-rates-2019.html  vuv-usd-spot-exchange-rates-2022.html  vuv-usd-spot-exchange-rates-2023.html
data/ura-affordability-reports/: 2020-07-source.csv  2020-10-source.csv  2021-02-source.csv  2021-07-source.csv  2021-09-source.csv  2021-10-source.csv  2021-11-source.csv  2021-12-source.csv  2022-03-source.csv
pages/: about.py  energy_prices.py  energy_sources.py  home.py  not_found_404.py  port_vila_prices.py
project/: Dockerfile  pyproject.toml
scripts/: extractUnelcoTariffReportData.py  fetchCurrencyExchangeRateData.py  fetchWtiMonthly.py
(+40 files in other folders)
